[tool.poetry]
name = "mysqlcode"
version = "0.1.0"
description = ""
authors = ["dripjournal <thedripjournal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
pandas = "^2.1.4"
pytest = "^7.4.4"
jupyter = "^1.0.0"
ipykernel = "^6.28.0"
mysql-connector-python = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
